--- a/src/content/blog/02-04-2025-vs-03-04-2025.md
+++ b/src/content/blog/02-04-2025-vs-03-04-2025.md
@@ -1,17 +1,17 @@
 ---
-title: 'Snapshot 02-04-2025 vs Snapshot 03-04-2025-after-maintenenance'
-pubDate: '04 04 2025'
+title: Snapshot 02-04-2025 vs. Snapshot 03-04-2025
+pubDate: 03 04 2025
 ---
 
 
 
 # New Flyff Universe Game Data Mining Report is available!
-*Important: This data has been automatically data-mined. Most of it might be used in future patches, some isn't or is changed later*
-*Data that shows up here has been added/changed/removed since the last check. No data means no changes in Game data*
+*Important: This data has been automatically data-mined. Most of it might be used in future patches, some isn't or is changed later*<br>
+*Data that shows up here has been added/changed/removed since the last check. No data means no changes in Game data*<br>
 *If data is appearing here, it doesn't mean that it is actually available in the game (yet)*
-## Comparing Game Data Snapshot from 02-04-2025 (OLD) with Snapshot from 03-04-2025-after-maintenenance (NEW)
+## Comparing Game Data Snapshot from 02-04-2025 (OLD) with Snapshot from 03-04-2025 (NEW)
 
-## New Items (172)
+## New Items (173)
 **Name:** Modern Alien Costume Lucky Box<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
@@ -253,6 +253,8 @@ pubDate: '04 04 2025'
 **Required Level:** 0<br>
 
 *Note:* Some fashion like Hat, Suit, Shoes and Backpacks were filtered out (112)
+## New EquipSets (0)
+*No new EquipSets*
 ## New Skills (0)
 *No new Skills*
 ## New Worlds (0)
@@ -268,7 +270,7 @@ pubDate: '04 04 2025'
 ## New Sounds (0)
 *No new Sounds*
 ## New Textures (126)
-**New interesting textures are attached to the post**
+**New interesting textures are attached to the Discord post only (copyright)**
 ```diff
 + item-0.png
 + lottery.png
@@ -398,7 +400,7 @@ pubDate: '04 04 2025'
 + part_fcloestr2501upper-et04.png
 ```
 ## New Sprites (340)
-**New interesting sprites are attached to the post**
+**New interesting sprites are attached to the Discord post only (copyright)**
 ```diff
 + item/fcloaln2501foot-et01.png
 + item/fcloaln2501foot-et02.png
@@ -1099,7 +1101,7 @@ pubDate: '04 04 2025'
 **Language Keys**: 36801 -> 37011<br>
 **Bin Files**: 22109 -> 23371<br>
 **Textures**: 17409 -> 18720<br>
-**Items**: 16864 -> 17036<br>
+**Items**: 16863 -> 17036<br>
 **Mover**: 1569 -> 1569<br>
 **Sounds**: 1327 -> 1327<br>
 **Skills**: 280 -> 280<br>
@@ -1110,6 +1112,3 @@ pubDate: '04 04 2025'
 ```ansi
 [2;36mBrought to you by[0m [2;34mi9hdkill[0m - [2;36mhappy flying[0m[2;31m[0m
 ```
-
-
-
