Add Discord Link

--- a/src/content/blog/02-04-2025-vs-03-04-2025.md
+++ b/src/content/blog/02-04-2025-vs-03-04-2025.md
@@ -334,7 +334,7 @@ pubDate: 09 04 2025
 ## New Sounds (0)
 *No new Sounds*
 ## New Textures (126)
-**New interesting textures are attached to the Discord post only (copyright)**
+**New interesting textures are attached to the <a href="https://discord.gg/2sWgMqwhRz">Discord Post</a> only (copyright)**
 ```diff
 + item-0.png
 + lottery.png
@@ -464,7 +464,7 @@ pubDate: 09 04 2025
 + part_fcloestr2501upper-et04.png
 ```
 ## New Sprites (340)
-**New interesting sprites are attached to the Discord post only (copyright)**
+**New interesting sprites are attached to the <a href="https://discord.gg/2sWgMqwhRz">Discord Post</a> only (copyright)**
 ```diff
 + item/fcloaln2501foot-et01.png
 + item/fcloaln2501foot-et02.png
