--- a/src/content/blog/03-04-2025-vs-17-04-2025.md
+++ b/src/content/blog/03-04-2025-vs-17-04-2025.md
@@ -297,16 +297,16 @@ pubDate: 04 17 2025
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
 ### Stats
-550-735 Critical Damage / 10<br>
-180-262 Critical Chance / 10<br>
-220-306 Attack Speed / 10 / 2<br>
+55-73,5 Critical Damage<br>
+18-26,2 Critical Chance<br>
+11-15,3 Attack Speed<br>
 4-11 Bleeding<br>
 ### Possible Bonus Values<br>
-20-55 Critical Chance / 10<br>
-15-55 Critical Damage / 10<br>
-15-55 Block Penetration<br>
+2-5,5 Critical Chance<br>
+1,5-5,5 Critical Damage<br>
+1,5-5,5 Block Penetration<br>
 2-4 Attack<br>
-4-8 Steal HP / 10<br>
+0,4-0,8 Steal HP<br>
 2-4 Max HP<br>
 2-5 STR<br>
 2-5 STA<br>
@@ -320,15 +320,15 @@ pubDate: 04 17 2025
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
 ### Stats
-580-780 Critical Damage / 10<br>
+58-78 Critical Damage<br>
 12-20 Attack<br>
-18-26 Critical Chance / 10<br>
-5-11 99<br>
+1,8-2,6 Critical Chance<br>
+5-11 Poison<br>
 ### Possible Bonus Values<br>
-30-110 Critical Damage / 10<br>
-30-110 Block Penetration<br>
+3-11 Critical Damage<br>
+3-11 Block Penetration<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STA<br>
 2-11 DEX<br>
@@ -341,17 +341,17 @@ pubDate: 04 17 2025
 **Required Job:** Assist<br>
 **Required Level:** 165<br>
 ### Stats
-550-735 Critical Damage / 10<br>
-290-405 Critical Chance / 10<br>
-200-295 Attack Speed / 10 / 2<br>
+55-73,5 Critical Damage<br>
+29-40,5 Critical Chance<br>
+10-14,75 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
 ### Possible Bonus Values<br>
-30-110 Critical Damage / 10<br>
-30-110 Block Penetration<br>
-30-110 Critical Chance / 10<br>
+3-11 Critical Damage<br>
+3-11 Block Penetration<br>
+3-11 Critical Chance<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STR<br>
 2-11 STA<br>
@@ -372,7 +372,7 @@ pubDate: 04 17 2025
 4-11 94<br>
 ### Possible Bonus Values<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STA<br>
 2-11 INT<br>
@@ -381,7 +381,7 @@ pubDate: 04 17 2025
 3-8 PvE Damage<br>
 3-11 Cast Speed<br>
 3-8 1013<br>
-2-11 4<br>
+2-11 Slowed<br>
 
 <img src="/images/03-04-2025-17-04-2025/sprites/weachecrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Stick<br>
 **Premium Item:** False<br>
@@ -394,7 +394,7 @@ pubDate: 04 17 2025
 25-35 INT<br>
 ### Possible Bonus Values<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STA<br>
 2-11 INT<br>
@@ -409,16 +409,16 @@ pubDate: 04 17 2025
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
 ### Stats
-530-723 Critical Damage / 10<br>
-230-292 Critical Chance / 10<br>
-300-381 Attack Speed / 10 / 2<br>
-4-11 99<br>
+53-72,3 Critical Damage<br>
+23-29,2 Critical Chance<br>
+15-19,05 Attack Speed<br>
+4-11 Poison<br>
 ### Possible Bonus Values<br>
-20-55 Critical Chance / 10<br>
-15-55 Critical Damage / 10<br>
-15-55 Block Penetration<br>
+2-5,5 Critical Chance<br>
+1,5-5,5 Critical Damage<br>
+1,5-5,5 Block Penetration<br>
 2-4 Attack<br>
-4-8 Steal HP / 10<br>
+0,4-0,8 Steal HP<br>
 2-4 Max HP<br>
 2-5 STR<br>
 2-5 STA<br>
@@ -432,17 +432,17 @@ pubDate: 04 17 2025
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
 ### Stats
-550-735 Critical Damage / 10<br>
-320-416 Critical Chance / 10<br>
-180-262 Attack Speed / 10 / 2<br>
+55-73,5 Critical Damage<br>
+32-41,6 Critical Chance<br>
+9-13,1 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
 ### Possible Bonus Values<br>
-30-110 Critical Damage / 10<br>
-30-110 Block Penetration<br>
-30-110 Critical Chance / 10<br>
+3-11 Critical Damage<br>
+3-11 Block Penetration<br>
+3-11 Critical Chance<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STR<br>
 2-11 STA<br>
@@ -456,16 +456,16 @@ pubDate: 04 17 2025
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
 ### Stats
-620-812 Critical Damage / 10<br>
-260-350 Critical Chance / 10<br>
-280-372 Attack Speed / 10 / 2<br>
+62-81,2 Critical Damage<br>
+26-35 Critical Chance<br>
+14-18,6 Attack Speed<br>
 4-11 Bleeding<br>
 ### Possible Bonus Values<br>
-30-110 Critical Damage / 10<br>
-30-110 Block Penetration<br>
-30-110 Critical Chance / 10<br>
+3-11 Critical Damage<br>
+3-11 Block Penetration<br>
+3-11 Critical Chance<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STR<br>
 2-11 STA<br>
@@ -485,7 +485,7 @@ pubDate: 04 17 2025
 4-11 94<br>
 ### Possible Bonus Values<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STA<br>
 2-11 INT<br>
@@ -494,23 +494,23 @@ pubDate: 04 17 2025
 3-8 PvE Damage<br>
 3-11 Cast Speed<br>
 10-22 12<br>
-2-11 4<br>
+2-11 Slowed<br>
 
 <img src="/images/03-04-2025-17-04-2025/sprites/weayoycrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Yo-Yo<br>
 **Premium Item:** False<br>
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
 ### Stats
-570-757 Critical Damage / 10<br>
+57-75,7 Critical Damage<br>
 25-35 STR<br>
-180-295 Critical Chance / 10<br>
+18-29,5 Critical Chance<br>
 4-11 Bleeding<br>
 ### Possible Bonus Values<br>
-30-110 Critical Damage / 10<br>
-30-110 Block Penetration<br>
-30-110 Critical Chance / 10<br>
+3-11 Critical Damage<br>
+3-11 Block Penetration<br>
+3-11 Critical Chance<br>
 3-8 Attack<br>
-6-16 Steal HP / 10<br>
+0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
 2-11 STR<br>
 2-11 STA<br>
@@ -518,7 +518,7 @@ pubDate: 04 17 2025
 3-8 Block<br>
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
-2-11 4<br>
+2-11 Slowed<br>
 
 ## New Equip Sets (0)
 *No new Equip Sets*
