--- a/src/content/blog/03-04-2025-vs-17-04-2025.md
+++ b/src/content/blog/03-04-2025-vs-17-04-2025.md
@@ -369,7 +369,7 @@ pubDate: 04 17 2025
 20-29 1013<br>
 28-38 Cast Speed<br>
 25-35 INT<br>
-4-11 94<br>
+4-11 Slowed<br>
 ### Possible Bonus Values<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
@@ -381,7 +381,7 @@ pubDate: 04 17 2025
 3-8 PvE Damage<br>
 3-11 Cast Speed<br>
 3-8 1013<br>
-2-11 Slowed<br>
+2-11 Speed<br>
 
 <img src="/images/03-04-2025-17-04-2025/sprites/weachecrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Stick<br>
 **Premium Item:** False<br>
@@ -482,7 +482,7 @@ pubDate: 04 17 2025
 17-26 Attack<br>
 25-35 Cast Speed<br>
 25-35 INT<br>
-4-11 94<br>
+4-11 Slowed<br>
 ### Possible Bonus Values<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
@@ -494,7 +494,7 @@ pubDate: 04 17 2025
 3-8 PvE Damage<br>
 3-11 Cast Speed<br>
 10-22 12<br>
-2-11 Slowed<br>
+2-11 Speed<br>
 
 <img src="/images/03-04-2025-17-04-2025/sprites/weayoycrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Yo-Yo<br>
 **Premium Item:** False<br>
@@ -518,7 +518,7 @@ pubDate: 04 17 2025
 3-8 Block<br>
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
-2-11 Slowed<br>
+2-11 Speed<br>
 
 ## New Equip Sets (0)
 *No new Equip Sets*
@@ -526,6 +526,32 @@ pubDate: 04 17 2025
 *No new Accessories*
 ## Changed Accessories (0)
 *No changed Accessories*
+
+## New Achievements (6)
+**Name:** 2025 FWC Beginner<br>
+**Description:** Reach level 16 in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
+**Name:** 2025 FWC Brawler<br>
+**Description:** Reach level 60 in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
+**Name:** 2025 FWC Warrior<br>
+**Description:** Reach level 100 in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
+**Name:** 2025 FWC Savior<br>
+**Description:** Reach level 140 in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
+**Name:** 2025 FWC Overlord<br>
+**Description:** Reach level 150 in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
+**Name:** 2025 FWC Master<br>
+**Description:** Complete all Gear Exchange in the Flyff World Championship.<br>
+**Levels:** 1<br>
+
 ## New Skills (2)
 **Name:** Grinder's Blessing<br>
 **Description:** Madrigal's elites guide you!<br>
@@ -920,6 +946,7 @@ You can earn [Housing] Ordinary Tree Seed 1 Day x5, [Housing] Ordinary Ore Depos
 **Sounds**: 1327 <br>
 **Skills**: 280 -> 282<br>
 **Equip Sets**: 214 <br>
+**Achievements**: 241 -> 247<br>
 **Worlds**: 81 <br>
 **Pets**: 10 <br>
 **And many more**
