--- a/src/content/blog/03-04-2025-vs-17-04-2025.md
+++ b/src/content/blog/03-04-2025-vs-17-04-2025.md
@@ -12,296 +12,353 @@ pubDate: 04 17 2025
 ## Comparing Game Data Snapshot from 03-04-2025 (OLD) with Snapshot from 17-04-2025 (NEW)
 
 ## New Items (66)
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** [Event] Easter Gift Box E<br>
+### [Event] Easter Gift Box E
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** Android Box<br>
+### Android Box
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** [Event] Easter Gift Box A<br>
+### [Event] Easter Gift Box A
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** [Event] Easter Gift Box B<br>
+### [Event] Easter Gift Box B
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** [Event] Easter Gift Box C<br>
+### [Event] Easter Gift Box C
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** [Event] Easter Gift Box D<br>
+### [Event] Easter Gift Box D
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** Android Level 15 Reward Box<br>
+### Android Level 15 Reward Box
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** Android Level 30 Reward Box<br>
+### Android Level 30 Reward Box
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** Android Level 45 Reward Box<br>
+### Android Level 45 Reward Box
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"> **Name:** Android Level 60 Reward Box<br>
+### Android Level 60 Reward Box
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxenhancement.png"> **Name:** Hunting Scroll Pack<br>
+### Hunting Scroll Pack
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxenhancement.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysbxluckypouchgold.png"> **Name:** EXP Buff Bag<br>
+### EXP Buff Bag
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysbxluckypouchgold.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_05.png"> **Name:** FWC Supply Pack (3 Days)<br>
+### FWC Supply Pack (3 Days)
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_05.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_05.png"> **Name:** FWC Hunting Bag<br>
+### FWC Hunting Bag
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_05.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_06.png"> **Name:** FWC 2025 Pre-Registration Reward<br>
+### FWC 2025 Pre-Registration Reward
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbxchan_06.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbagbag01.png"> **Name:** Extra Bag (3 days)<br>
+### Extra Bag (3 days)
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrbagbag01.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/bank_extra_bag_15_days.png"> **Name:** Bank Extra Bag (3 Days)<br>
+### Bank Extra Bag (3 Days)
+<img src="/images/03-04-2025-17-04-2025/sprites/bank_extra_bag_15_days.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/eveeasteregg.png"> **Name:** [Event] Easter Egg<br>
+### [Event] Easter Egg
+<img src="/images/03-04-2025-17-04-2025/sprites/eveeasteregg.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/gentooevepickaxe01.png"> **Name:** [Event] Chroma Pickaxe<br>
+### [Event] Chroma Pickaxe
+<img src="/images/03-04-2025-17-04-2025/sprites/gentooevepickaxe01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/gentooevepickaxe01.png"> **Name:** Chroma Pickaxe<br>
+### Chroma Pickaxe
+<img src="/images/03-04-2025-17-04-2025/sprites/gentooevepickaxe01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagemastery.png"> **Name:** Lifestyle Mastery Bag<br>
+### Lifestyle Mastery Bag
+<img src="/images/03-04-2025-17-04-2025/sprites/storagemastery.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagepremium.png"> **Name:** Premium Lifestyle Bag<br>
+### Premium Lifestyle Bag
+<img src="/images/03-04-2025-17-04-2025/sprites/storagepremium.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"> **Name:** Herb Gathering Bag (4 Slots)<br>
+### Herb Gathering Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"> **Name:** Herb Gathering Bag (8 Slots)<br>
+### Herb Gathering Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"> **Name:** Herb Gathering Bag (12 Slots)<br>
+### Herb Gathering Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"> **Name:** Herb Gathering Bag (16 Slots)<br>
+### Herb Gathering Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storageherb.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"> **Name:** Wood Cutting Bag (4 Slots)<br>
+### Wood Cutting Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"> **Name:** Wood Cutting Bag (8 Slots)<br>
+### Wood Cutting Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"> **Name:** Wood Cutting Bag (12 Slots)<br>
+### Wood Cutting Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"> **Name:** Wood Cutting Bag (16 Slots)<br>
+### Wood Cutting Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagewood.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"> **Name:** Mining Bag (4 Slots)<br>
+### Mining Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"> **Name:** Mining Bag (8 Slots)<br>
+### Mining Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"> **Name:** Mining Bag (12 Slots)<br>
+### Mining Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"> **Name:** Mining Bag (16 Slots)<br>
+### Mining Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagemining.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"> **Name:** Fishing Bag (4 Slots)<br>
+### Fishing Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"> **Name:** Fishing Bag (8 Slots)<br>
+### Fishing Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"> **Name:** Fishing Bag (12 Slots)<br>
+### Fishing Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"> **Name:** Fishing Bag (16 Slots)<br>
+### Fishing Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagefishing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"> **Name:** Alchemy Bag (4 Slots)<br>
+### Alchemy Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"> **Name:** Alchemy Bag (8 Slots)<br>
+### Alchemy Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"> **Name:** Alchemy Bag (12 Slots)<br>
+### Alchemy Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"> **Name:** Alchemy Bag (16 Slots)<br>
+### Alchemy Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagealchemy.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"> **Name:** Cooking Bag (4 Slots)<br>
+### Cooking Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"> **Name:** Cooking Bag (8 Slots)<br>
+### Cooking Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"> **Name:** Cooking Bag (12 Slots)<br>
+### Cooking Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"> **Name:** Cooking Bag (16 Slots)<br>
+### Cooking Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecooking.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"> **Name:** Carpentry Bag (4 Slots)<br>
+### Carpentry Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"> **Name:** Carpentry Bag (8 Slots)<br>
+### Carpentry Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"> **Name:** Carpentry Bag (12 Slots)<br>
+### Carpentry Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"> **Name:** Carpentry Bag (16 Slots)<br>
+### Carpentry Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagecarpentry.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"> **Name:** Smithing Bag (4 Slots)<br>
+### Smithing Bag (4 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"> **Name:** Smithing Bag (8 Slots)<br>
+### Smithing Bag (8 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"> **Name:** Smithing Bag (12 Slots)<br>
+### Smithing Bag (12 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"> **Name:** Smithing Bag (16 Slots)<br>
+### Smithing Bag (16 Slots)
+<img src="/images/03-04-2025-17-04-2025/sprites/storagesmithing.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrpetfeedpocket.png"> **Name:** Feed Bag (3 Days)<br>
+### Feed Bag (3 Days)
+<img src="/images/03-04-2025-17-04-2025/sprites/syssysscrpetfeedpocket.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/pickupscrollboost.png"> **Name:** Scroll of Pickup Boost (3 Days)<br>
+### Scroll of Pickup Boost (3 Days)
+<img src="/images/03-04-2025-17-04-2025/sprites/pickupscrollboost.png"><br>
 **Premium Item:** True<br>
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weaaxecrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Axe<br>
+### 2025 FWC Golden Lusaka's Crystal Axe
+<img src="/images/03-04-2025-17-04-2025/sprites/weaaxecrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 55-73,5 Critical Damage<br>
 18-26,2 Critical Chance<br>
 11-15,3 Attack Speed<br>
 4-11 Bleeding<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 2-5,5 Critical Chance<br>
 1,5-5,5 Critical Damage<br>
 1,5-5,5 Block Penetration<br>
@@ -315,16 +372,17 @@ pubDate: 04 17 2025
 2-4 PvP Damage<br>
 2-4 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weabowcrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Bow<br>
+### 2025 FWC Golden Lusaka's Crystal Bow
+<img src="/images/03-04-2025-17-04-2025/sprites/weabowcrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 58-78 Critical Damage<br>
 12-20 Attack<br>
 1,8-2,6 Critical Chance<br>
 5-11 Poison<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-8 Attack<br>
@@ -336,17 +394,18 @@ pubDate: 04 17 2025
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weaknucrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Fist<br>
+### 2025 FWC Golden Lusaka's Crystal Fist
+<img src="/images/03-04-2025-17-04-2025/sprites/weaknucrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Assist<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 55-73,5 Critical Damage<br>
 29-40,5 Critical Chance<br>
 10-14,75 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -361,16 +420,17 @@ pubDate: 04 17 2025
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weastacrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Staff<br>
+### 2025 FWC Golden Lusaka's Crystal Staff
+<img src="/images/03-04-2025-17-04-2025/sprites/weastacrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Magician<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 20-29 1013<br>
 28-38 Cast Speed<br>
 25-35 INT<br>
 4-11 Slowed<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -383,16 +443,17 @@ pubDate: 04 17 2025
 3-8 1013<br>
 2-11 Speed<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weachecrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Stick<br>
+### 2025 FWC Golden Lusaka's Crystal Stick
+<img src="/images/03-04-2025-17-04-2025/sprites/weachecrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Assist<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 12-20 Attack<br>
 12-20 Healing<br>
 28-38 Cast Speed<br>
 25-35 INT<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -404,16 +465,17 @@ pubDate: 04 17 2025
 3-11 Cast Speed<br>
 3-11 Healing<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weaswocrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Sword<br>
+### 2025 FWC Golden Lusaka's Crystal Sword
+<img src="/images/03-04-2025-17-04-2025/sprites/weaswocrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 53-72,3 Critical Damage<br>
 23-29,2 Critical Chance<br>
 15-19,05 Attack Speed<br>
 4-11 Poison<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 2-5,5 Critical Chance<br>
 1,5-5,5 Critical Damage<br>
 1,5-5,5 Block Penetration<br>
@@ -427,17 +489,18 @@ pubDate: 04 17 2025
 2-4 PvP Damage<br>
 2-4 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weaaxtcrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Heavy Crystal Axe<br>
+### 2025 FWC Golden Lusaka's Heavy Crystal Axe
+<img src="/images/03-04-2025-17-04-2025/sprites/weaaxtcrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 55-73,5 Critical Damage<br>
 32-41,6 Critical Chance<br>
 9-13,1 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -451,16 +514,17 @@ pubDate: 04 17 2025
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weaswtcrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Heavy Crystal Sword<br>
+### 2025 FWC Golden Lusaka's Heavy Crystal Sword
+<img src="/images/03-04-2025-17-04-2025/sprites/weaswtcrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 62-81,2 Critical Damage<br>
 26-35 Critical Chance<br>
 14-18,6 Attack Speed<br>
 4-11 Bleeding<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -474,16 +538,17 @@ pubDate: 04 17 2025
 3-8 PvP Damage<br>
 3-8 PvE Damage<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weawanrustiacrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Wand<br>
+### 2025 FWC Golden Lusaka's Crystal Wand
+<img src="/images/03-04-2025-17-04-2025/sprites/weawanrustiacrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Magician<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 17-26 Attack<br>
 25-35 Cast Speed<br>
 25-35 INT<br>
 4-11 Slowed<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -496,16 +561,17 @@ pubDate: 04 17 2025
 10-22 12<br>
 2-11 Speed<br>
 
-<img src="/images/03-04-2025-17-04-2025/sprites/weayoycrystal-et01.png"> **Name:** 2025 FWC Golden Lusaka's Crystal Yo-Yo<br>
+### 2025 FWC Golden Lusaka's Crystal Yo-Yo
+<img src="/images/03-04-2025-17-04-2025/sprites/weayoycrystal-et01.png"><br>
 **Premium Item:** False<br>
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
-### Stats
+Stats
 57-75,7 Critical Damage<br>
 25-35 STR<br>
 18-29,5 Critical Chance<br>
 4-11 Bleeding<br>
-### Possible Bonus Values<br>
+Possible Bonus Values<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -553,14 +619,12 @@ pubDate: 04 17 2025
 **Levels:** 1<br>
 
 ## New Skills (2)
-**Name:** Grinder's Blessing<br>
+<img src="/images/03-04-2025-17-04-2025/sprites/sklking05.png"> **Name:** Grinder's Blessing<br>
 **Description:** Madrigal's elites guide you!<br>
-**Icon:** sklKing05.png<br>
 **Job:** Vagrant<br>
 
-**Name:** Bubble's Fortune<br>
+<img src="/images/03-04-2025-17-04-2025/sprites/sklking01.png"> **Name:** Bubble's Fortune<br>
 **Description:** Madrigal's most fortunate guide you!<br>
-**Icon:** sklKing01.png<br>
 **Job:** Vagrant<br>
 
 ## New Worlds (0)
