--- a/src/content/blog/03-04-2025-vs-17-04-2025.md
+++ b/src/content/blog/03-04-2025-vs-17-04-2025.md
@@ -353,12 +353,12 @@ pubDate: 04 17 2025
 **Premium Item:** False<br>
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 55-73,5 Critical Damage<br>
 18-26,2 Critical Chance<br>
 11-15,3 Attack Speed<br>
 4-11 Bleeding<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 2-5,5 Critical Chance<br>
 1,5-5,5 Critical Damage<br>
 1,5-5,5 Block Penetration<br>
@@ -377,12 +377,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 58-78 Critical Damage<br>
 12-20 Attack<br>
 1,8-2,6 Critical Chance<br>
 5-11 Poison<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-8 Attack<br>
@@ -399,13 +399,13 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Assist<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 55-73,5 Critical Damage<br>
 29-40,5 Critical Chance<br>
 10-14,75 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -425,12 +425,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Magician<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 20-29 1013<br>
 28-38 Cast Speed<br>
 25-35 INT<br>
 4-11 Slowed<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -448,12 +448,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Assist<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 12-20 Attack<br>
 12-20 Healing<br>
 28-38 Cast Speed<br>
 25-35 INT<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -470,12 +470,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Mercenary<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 53-72,3 Critical Damage<br>
 23-29,2 Critical Chance<br>
 15-19,05 Attack Speed<br>
 4-11 Poison<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 2-5,5 Critical Chance<br>
 1,5-5,5 Critical Damage<br>
 1,5-5,5 Block Penetration<br>
@@ -494,13 +494,13 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 55-73,5 Critical Damage<br>
 32-41,6 Critical Chance<br>
 9-13,1 Attack Speed<br>
 1-5 Stun (PvE)<br>
 1-5 Stun (PvP)<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -519,12 +519,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Knight<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 62-81,2 Critical Damage<br>
 26-35 Critical Chance<br>
 14-18,6 Attack Speed<br>
 4-11 Bleeding<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
@@ -543,12 +543,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Magician<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 17-26 Attack<br>
 25-35 Cast Speed<br>
 25-35 INT<br>
 4-11 Slowed<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-8 Attack<br>
 0,6-1,6 Steal HP<br>
 3-8 Max HP<br>
@@ -566,12 +566,12 @@ Possible Bonus Values<br>
 **Premium Item:** False<br>
 **Required Job:** Acrobat<br>
 **Required Level:** 165<br>
-Stats
+**Stats**<br>
 57-75,7 Critical Damage<br>
 25-35 STR<br>
 18-29,5 Critical Chance<br>
 4-11 Bleeding<br>
-Possible Bonus Values<br>
+**Possible Bonus Values**<br>
 3-11 Critical Damage<br>
 3-11 Block Penetration<br>
 3-11 Critical Chance<br>
