--- a/src/content/blog/24-07-2025-vs-07-08-2025.md
+++ b/src/content/blog/24-07-2025-vs-07-08-2025.md
@@ -274,6 +274,46 @@ pubDate: 08 07 2025
 *No changed Skills*
 ## New Worlds (0)
 *No new Worlds*
+## Changed Mover (10)
+**Name:** Caveman Chief has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Temple Guardian has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Great Kraken has changes<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Pyramid Guardian has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Rex Potato has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Prince Potato has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 10000000 to 20000000<br>
+
+**Name:** Shadow of Clockworks has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 92873265 to 185746530<br>
+
+**Name:** Beast King Khan has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Blue Meteonyker has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 90000000 to 180000000<br>
+
+**Name:** Scorched Meteonyker has changes<br>
+**Level changed from** 150 to 155<br>
+**HP changed from** 5000000 to 10000000<br>
+
 ## New Mover (Monster etc.) (5)
 **Blue Pawsh**<br>
 **Level:** 0<br>
