--- a/src/content/blog/24-07-2025-vs-07-08-2025.md
+++ b/src/content/blog/24-07-2025-vs-07-08-2025.md
@@ -19,7 +19,7 @@ pubDate: 08 07 2025
 **Required Job:** Vagrant<br>
 **Required Level:** 0<br>
 **Stats**<br>
-50 74<br>
+50 EXP<br>
 5 All Stats<br>
 5 Attack Speed<br>
 5 Cast Speed<br>
