--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -14,137 +14,119 @@ pubDate: 08 21 2025
 ## New Items (18)
 **Nobility Costume Lucky Box**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
+**Description:** This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Autumn Buff Lucky Box**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbronzebox.png"><br>
+**Description:** This box contains a random Maple buff, which can be one of the following: Red Maple, Blue Maple, White Maple, or Green Maple.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Summer Smelting Scroll Package**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxmarch.png"><br>
+**Description:** A package containing 20x Scroll of SProtect and 5x Scroll of Weapon Bonus. All items are also linked.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Autumn Harvesting Pack**
 <img src="/images/07-08-2025-21-08-2025/sprites/defaultpackbox01.png"><br>
+**Description:** A package containing 20x Autumn Buff Lucky Box, 5x Scroll of Amplification, 5x Flask Box and 5x Vital Drink X or Refresher Hold. All items are also linked.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Cute Costume Select Box 1**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
+**Description:** Select which Costume you want to receive<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Animal Costume Select Box 1**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
+**Description:** Select which Costume you want to receive<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Blue Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Pink Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et01.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Orange Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et02.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Green Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et03.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Navy Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et04.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 **Red Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et05.png"><br>
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 *Note:* Some fashion like Hat, Suit, Shoes and Backpacks were filtered out (6)
 ## Changed Items (6)
-**Name:** Nobility 2% Red Set (M) has changes<br>
-**Nobility 2% Red Set (M) --> Nobility Red Suit (M)**
+**Name:** Nobility Costume Lucky Box has changes<br>
+**Nobility Costume Lucky Box --> Nobility Red Suit (M)**
+**Description:** This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box. --> <br>
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/mclo2025nobilityupper-et05.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
-**Name:** Nobility 2% Red Set has changes<br>
-**Nobility 2% Red Set**
+**Name:** Blue Pawsh has changes<br>
+**Blue Pawsh --> Nobility 2% Red Set**
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair. --> Select which Gender you want to receive!<br>
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
-**Name:** Nobility Red Hat (M) has changes<br>
-**Nobility Red Hat (M) --> Nobility 2% Red Set (M)**
+**Name:** Pink Pawsh has changes<br>
+**Pink Pawsh --> Nobility 2% Red Set (M)**
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair. --> The Nobility 2% Red Set for male characters.<br>
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et01.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
-**Name:** Nobility Red Suit (M) has changes<br>
-**Nobility Red Suit (M) --> Nobility 2% Red Set (F)**
+**Name:** Orange Pawsh has changes<br>
+**Orange Pawsh --> Nobility 2% Red Set (F)**
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair. --> The Nobility 2% Red Set for female characters.<br>
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et02.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
-**Name:** Nobility Red Shoes (M) has changes<br>
-**Nobility Red Shoes (M) --> Nobility Red Cloak**
+**Name:** Green Pawsh has changes<br>
+**Green Pawsh --> Nobility Red Cloak**
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair. --> <br>
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et03.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/mfcloak2025nobility-et05.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
-**Name:** Nobility Red Hands (M) has changes<br>
-**Nobility Red Hands (M) --> Nobility Red Hat (M)**
+**Name:** Navy Pawsh has changes<br>
+**Navy Pawsh --> Nobility Red Hat (M)**
+**Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair. --> <br>
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et04.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/mclo2025nobilityhair-et05.png"><br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
-**Required Job:** Vagrant<br>
-**Required Level:** 0<br>
 
 ## New Equip Sets (0)
 *No new Equip Sets*
