--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -1,6 +1,6 @@
 ---
 title: Snapshot 07-08-2025 vs. Snapshot 21-08-2025
-pubDate: 08 21 2025
+pubDate: 08 26 2025
 ---
 
 
@@ -17,72 +17,84 @@ pubDate: 08 21 2025
 **Description:** This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Autumn Buff Lucky Box**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbronzebox.png"><br>
 **Description:** This box contains a random Maple buff, which can be one of the following: Red Maple, Blue Maple, White Maple, or Green Maple.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Summer Smelting Scroll Package**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxmarch.png"><br>
 **Description:** A package containing 20x Scroll of SProtect and 5x Scroll of Weapon Bonus. All items are also linked.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Autumn Harvesting Pack**
 <img src="/images/07-08-2025-21-08-2025/sprites/defaultpackbox01.png"><br>
 **Description:** A package containing 20x Autumn Buff Lucky Box, 5x Scroll of Amplification, 5x Flask Box and 5x Vital Drink X or Refresher Hold. All items are also linked.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Cute Costume Select Box 1**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Description:** Select which Costume you want to receive<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Animal Costume Select Box 1**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Description:** Select which Costume you want to receive<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Item Pack<br>
 
 **Blue Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 **Pink Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et01.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 **Orange Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et02.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 **Green Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et03.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 **Navy Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et04.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 **Red Pawsh**
 <img src="/images/07-08-2025-21-08-2025/sprites/pet2025nobility-et05.png"><br>
 **Description:** Too posh to pounce, but just fancy enough to fetch your loot with flair.<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
+**Item Kind:** Pickup Pet<br>
 
 *Note:* Some fashion like Hat, Suit, Shoes and Backpacks were filtered out (6)
 ## Changed Items (6)
@@ -143,6 +155,8 @@ pubDate: 08 21 2025
 *No changed Skills*
 ## New Worlds (0)
 *No new Worlds*
+## New Maps (0)
+*No new Maps*
 ## Changed Mover (0)
 *No changed Movers*
 ## New Mover (Monster etc.) (1)
@@ -153,6 +167,29 @@ pubDate: 08 21 2025
 **Killable:** False<br>
 **Element:** None<br>
 
+## Changed Emoticons (0)
+*No changed Emoticons*
+## New Emoticons (0)
+## Changed Couple Skills (0)
+*No changed Couple Skills*
+## New CoupleSkills (0)
+*No new Couple Skills*
+## Changed Party Skills (0)
+*No changed Party Skills*
+## New CoupleSkills (0)
+*No new Party Skills*
+## Changed Item Kinds (0)
+*No changed Item Kinds*
+## New Item Kinds (0)
+*No new Item Kinds*
+## Changed Music (0)
+*No changed Music*
+## New Music (0)
+*No new Music*
+## Changed Characters (0)
+*No changed Characters*
+## New Characters (0)
+*No new Item Kinds*
 ## New Jobs (0)
 *No new Jobs*
 ## Changed Pets (0)
@@ -218,10 +255,16 @@ pubDate: 08 21 2025
 **Items**: 18321 -> 18339<br>
 **Mover**: 1629 -> 1630<br>
 **Sounds**: 1327 <br>
+**Music**: 64 <br>
+**Emoticons**: 36 <br>
 **Skills**: 282 <br>
+**Party Skills**: 9 <br>
+**Couple Skills**: 8 <br>
 **Equip Sets**: 214 <br>
 **Achievements**: 247 <br>
 **Worlds**: 82 <br>
+**Maps**: 280 <br>
+**Item Kinds**: 30 <br>
 **Pets**: 10 <br>
 **And many more**
 
